@@ -802,7 +802,10 @@ jQuery(document).ready(function($) {
 
         $(identifier).click(function() {
             var idStr = $(this).attr("id").split("_");
-            openDV(idStr[0], idStr[1], idStr[2], idStr[3]);
+            // Don't open OR DV if score is pending.
+            if (!$(this).children('.score_colour').hasClass('score_colour_')) {
+                openDV(idStr[0], idStr[1], idStr[2], idStr[3]);
+            }
         });
     }
 
